# q4_majorshortsqueezes

./: DEVELOPMENT.md  README.md  pyproject.toml
conda/: conda-3-9-env.yaml
q4_majorshortsqueezes/: filter.py  get_tickers_fixed.py  hello_world.py  ticker.py
results_1/: README.md  amex_min_1000_multi_2_days_10.csv  amex_min_1000_multi_2_days_5.csv  amex_min_1000_multi_3_days_10.csv  amex_min_1000_multi_3_days_5.csv  amex_min_1000_multi_5_days_5.csv  amex_min_100_multi_2_days_10.csv  amex_min_100_multi_2_days_5.csv  amex_min_100_multi_3_days_10.csv  amex_min_100_multi_3_days_5.csv  amex_min_100_multi_5_days_10.csv  amex_min_100_multi_5_days_5.csv  amex_min_10_multi_2_days_10.csv  amex_min_10_multi_2_days_5.csv  amex_min_10_multi_3_days_10.csv  amex_min_10_multi_3_days_5.csv  amex_min_10_multi_5_days_10.csv  amex_min_10_multi_5_days_5.csv  create_analysis_tables.py  create_filtered_tickers.sh  detailed_overview_table.md  most_extreme_short_squeezes_min_10.md  most_extreme_short_squeezes_min_1000.md  nasdaq_min_1000_multi_2_days_10.csv  nasdaq_min_1000_multi_2_days_5.csv  nasdaq_min_1000_multi_3_days_10.csv  nasdaq_min_1000_multi_3_days_5.csv  nasdaq_min_1000_multi_5_days_10.csv  nasdaq_min_1000_multi_5_days_5.csv  nasdaq_min_100_multi_2_days_10.csv  nasdaq_min_100_multi_2_days_5.csv  nasdaq_min_100_multi_3_days_10.csv  nasdaq_min_100_multi_3_days_5.csv  nasdaq_min_100_multi_5_days_10.csv  nasdaq_min_100_multi_5_days_5.csv  nasdaq_min_10_multi_2_days_10.csv  nasdaq_min_10_multi_2_days_5.csv  nasdaq_min_10_multi_3_days_10.csv  nasdaq_min_10_multi_3_days_5.csv  (+23 more)
(+10 files in other folders)
